--- a/conf/config_ft.yaml
+++ b/conf/config_ft.yaml
@@ -6,12 +6,15 @@ defaults:
 
 model:
   ssl_method: mtl
-  num_epochs : 5
+  # num_epochs : 5
+  num_epochs: 30
   lr :  1e-4
   batch_size : 100
   patience: 5
 
 data:
-  data_root: N:\Gait-Neurodynamics by Names\Yonatan\SSL\ElderNet\data\MobiliseD\data #N:\Gait-Neurodynamics by Names\Yonatan\Moblise-D\parsed_data\OAs\10secNoOverlap\WithoutPreprocess\final\train
-  log_path: N:\Gait-Neurodynamics by Names\Yonatan\SSL\ElderNet\data\MobiliseD
+  # data_root: F:\UNI\ParkinsonsProject\ParkScan-Pro\parsing_output
+  # log_path: F:\UNI\ParkinsonsProject\ParkScan-Pro\logs
+  data_root: ..\parsing_output
+  log_path: ..\logs
   dense_labeling: False
