--- a/conf/model/ElderNet.yaml
+++ b/conf/model/ElderNet.yaml
@@ -8,4 +8,4 @@ ssl_checkpoint_available: False
 ft_checkpoint_available: False
 # trained_model_path : F:\UNI\ParkinsonsProject\ElderNet\model_check_point\ft_weights.pt
 # trained_model_path : F:\UNI\ParkinsonsProject\ElderNet\model_check_point\ssl_weights.mdl
-trained_model_path : .\model_check_point\ssl_weights.mdl
+trained_model_path : ./model_check_point/ssl_weights.mdl
