Added multi-class classification support in a generalized implementation - adapts according to labels input shape. Also added class weights

--- a/conf/config_ft.yaml
+++ b/conf/config_ft.yaml
@@ -11,6 +11,7 @@ model:
   lr :  1e-4
   batch_size : 100
   patience: 5
+  multiclass: True
 
 data:
   # data_root: F:\UNI\ParkinsonsProject\ParkScan-Pro\parsing_output
