--- a/conf/config_ft.yaml
+++ b/conf/config_ft.yaml
@@ -14,6 +14,8 @@ model:
   batch_size : 100
   patience: 5
   multiclass: True
+  rebalance: True
+  classes_to_remove: [1]
 
 data:
   # data_root: \parsing_output
