--- a/conf/model/TremorNet.yaml
+++ b/conf/model/TremorNet.yaml
@@ -5,7 +5,8 @@ num_layers: 3
 non_linearity: True
 pretrained: True
 ssl_checkpoint_available: False
-ft_checkpoint_available: False
+ft_checkpoint_available: True
 # trained_model_path : F:\UNI\ParkinsonsProject\ElderNet\model_check_point\ft_weights.pt
 # trained_model_path : F:\UNI\ParkinsonsProject\ElderNet\model_check_point\ssl_weights.mdl
-trained_model_path : ./model_check_point/ssl_weights.mdl
+# Might need the full path for this one
+trained_model_path : ./model_check_point/ft_weights.pt
