The new conf files

--- a/conf/model/ElderNet.yaml
+++ b/conf/model/ElderNet.yaml
@@ -4,8 +4,8 @@ head: fc
 num_layers: 3
 non_linearity: True
 pretrained: True
-ssl_checkpoint_available: False
-ft_checkpoint_available: False
+ssl_checkpoint_available: True
+ft_checkpoint_available: True
 # trained_model_path : F:\UNI\ParkinsonsProject\ElderNet\model_check_point\ft_weights.pt
 # trained_model_path : F:\UNI\ParkinsonsProject\ElderNet\model_check_point\ssl_weights.mdl
 trained_model_path : ./model_check_point/ssl_weights.mdl
